wip fill method

--- a/masters_thesis/thesis.bib
+++ b/masters_thesis/thesis.bib
@@ -26,6 +26,15 @@
   publisher={CRC Press}
 }
 
+@book{graph_theory,
+ author = {Bondy, J.A. and Murty, U.S.R},
+ title = {Graph Theory},
+ year = {2008},
+ isbn = {1846289696},
+ edition = {1st},
+ publisher = {Springer Publishing Company, Incorporated},
+}
+
 @online{llvm,
     author={LLVM},
     title="{The LLVM Compiler Infrastructure}",
